--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="about-image">
                     <!-- CHANGE src to your portrait, alt text -->
-                    <img src="portrait.jpg" alt="Your Name Portrait" id="portrait-img">
+                    <img src="https://i.postimg.cc/SQrGvR9D/me.jpg" alt="Portrait" id="portrait-img">
                 </div>
             </div>
         </section>
@@ -88,11 +88,11 @@
             <h2>Contact</h2>
             <div class="contact-links">
                 <!-- CHANGE email address -->
-                <a href="mailto:your.email@example.com" aria-label="Email me">
+                <a href="mailto:penguin.kaushik@gmail.com" aria-label="Email me">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
                  <!-- CHANGE LinkedIn URL -->
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="View my LinkedIn profile">
+                <a href="https://www.linkedin.com/in/kaushik-tadepalli-17778a359/" target="_blank" rel="noopener noreferrer" aria-label="View my LinkedIn profile">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <!-- Add other icon links if desired (e.g., GitHub) -->
