--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CHANGE Your Name -->
-    <title>Kaushik Tadepalli</title>
+    <title>Kaushik Tadepalli - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,8 +29,11 @@
         <section id="about" class="about-section">
             <div class="about-content">
                 <div class="about-text">
-                    <!-- CHANGE data-text to your actual name -->
-                    <h1 id="name-heading" data-text="Kaushik Tadepalli">Kaushik Tadepalli</h1>
+                    <!-- MODIFIED H1: Use data attributes and <br> for two lines -->
+                    <!-- CHANGE data-first, data-last, and text inside h1 -->
+                    <h1 id="name-heading" data-first="Kaushik" data-last="Tadepalli">
+                        Kaushik<br>Tadepalli
+                    </h1>
                     <!-- CHANGE Subtitle -->
                     <p class="subtitle">Junior at Los Gatos High School</p>
                     <!-- CHANGE About description -->
@@ -40,8 +43,8 @@
                 </div>
                 <div class="about-image">
                     <!-- CHANGE src to your portrait, alt text -->
-                    <img src="https://i.postimg.cc/SQrGvR9D/me.jpg" alt="Portrait" id="portrait-img">
-                </div>
+                    <img src="https://i.postimg.cc/SQrGvR9D/me.jpg" alt="Kaushik Tadepalli Portrait" id="portrait-img">
+              </div>
             </div>
         </section>
 
@@ -72,14 +75,6 @@
                 </div>
 
                 <!-- Add more project cards as needed -->
-                <!-- Example:
-                <div class="project-card" data-project-id="proj3">
-                    <img src="project3.jpg" alt="Project 3 Thumbnail">
-                    <h3>Project Title 3</h3>
-                    <p>Brief description of project 3...</p>
-                    <button class="expand-btn">View Details</button>
-                </div>
-                -->
             </div>
         </section>
 
@@ -96,11 +91,6 @@
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <!-- Add other icon links if desired (e.g., GitHub) -->
-                <!-- Example:
-                <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="View my GitHub profile">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-                 -->
             </div>
         </section>
 
